<resources>
    <string name="app_name">Viaggia Play&amp;Go</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="start">Start</string>
    <string name="start_bike_tracking">Start bike tracking</string>
    <string name="start_walk_tracking">Start walk tracking</string>
    <string name="start_bus_tracking">Start bus tracking</string>
    <string name="start_train_tracking">Start train tracking</string>
    <string name="title_activity_tracking_on">tracking_on</string>
    <string name="title_activity_tracking_start">tracking_start</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="tracking_activity_background">Tracking activity background</string>
    <string name="stop">Stop</string>
    <string name="title_activity_tracking_sync">tracking_sync</string>
    <string name="green_leaves_points">Green Leaves Points</string>
    <string name="ranking">Ranking</string>
    <string name="title_activity_main">main</string>
</resources>
